Fixed radiobutton issue and aligned the text boxes

--- a/customCSS.css
+++ b/customCSS.css
@@ -1,3 +1,4 @@
+*{margin:0;padding:0;}
 body {
   padding-top: 60px;
 }
@@ -191,3 +192,4 @@ hr.style {
     border-bottom: 1px dashed #ccc;
     background: #999;
 }
+
